[package]
name = "bismark-nome-filtering"
version = "1.0.0"
description = "Rust port of Bismark Perl's standalone NOMe_filtering script (per-read NOMe-Seq classifier)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["bisulfite", "methylation", "bismark", "nome-seq", "bioinformatics"]
categories = ["science::bioinformatics", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "NOMe_filtering"
path = "src/main.rs"

[dependencies]
bismark-meta = { version = "1.0.0", path = "../bismark-meta" }
bismark-io = { version = "=1.0.0", path = "../bismark-io" }
clap = { version = "=4.5.30", features = ["derive"] }
thiserror = "=2.0.18"
# Phase B: always-gzipped `.manOwar.txt.gz` output + gz-aware yacht input.
flate2 = "=1.1.9"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
